# amaru-treasury-tx

./: .gitignore  .hlint.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Wip.md  amaru-treasury-tx.cabal  cabal.project  dist-newstyle  flake.nix  fourmolu.yaml  gate.sh  index.html  justfile  mkdocs.yml  release-please-config.json  sitemap.xml  vendors.yaml
.github/workflows/: ci.yml  darwin-release.yml  deploy-docs.yml  image-publish.yml  release-plan.yml  release.yml
.specify/memory/: constitution.md
app/amaru-treasury-inspect-schema/: Main.hs
app/amaru-treasury-intent-schema/: Main.hs
app/amaru-treasury-report-schema/: Main.hs
app/amaru-treasury-tx/: Main.hs
app/amaru-treasury-tx-api/: Main.hs
app/capture-swap-context/: Main.hs
app/devnet-cli-smoke-host/: Main.hs
app/horizon-probe/: Main.hs
app/swap-probe/: Main.hs
architecture/: index.html
assets/blueprints/: PROVENANCE.md  treasury-spend.cip57.json
assets/plutus/: README.md  permissions.cbor  scopes.cbor  sundae_order.cbor  treasury.cbor  treasury_registry.cbor
chain-context/: index.html
docs/: api-container-indexer.md  architecture.md  chain-context.md  dependencies.md  devnet-bootstrap.md  disburse.md  freeze-workflow.md  history-rdf-case-study.md  history-rdf-demo.md  index.md  inspect.md  local-devnet-smoke.md  parity.md  quickstart.md  release.md  reorganize.md  report-render.md  swap-rerate.md  swap.md  trust-model.md  withdraw.md  wizard-input-control.md
docs/assets/: intent-schema.json  treasury-inspect-schema.json  tx-report-schema.json
freeze-workflow/: index.html
frontend/: .gitignore  package.json  spago.yaml
frontend/src/: Api.js  Api.purs  App.js  App.purs  AuditPage.purs  BooksPage.js  BooksPage.purs  BuildPage.purs  Format.purs  JsonTreeBehaviour.js  JsonTreeBehaviour.purs  JsonView.purs  Main.purs  OperatePage.js  OperatePage.purs  PendingPage.js  PendingPage.purs  Routing.js  Routing.purs  Shell.purs  Theme.js  Theme.purs  bootstrap.js
lib/Amaru/: Treasury.hs
llm/reviews/: gate.sh  state.md  work-review.md
nix/: apps.nix  build-identity.nix  checks.nix  darwin-release.nix  docker.nix  frontend.nix  linux-artifact-smoke.nix  linux-release.nix  metadata.nix  recent-txs.nix
onchain/: .gitignore  AGENTS.md  README.md  aiken.toml
onchain/validators/: swap_vault.ak
parity/: index.html
quickstart/: index.html
release/: index.html
scripts/: build-may-antithesis-disburse.sh  build-may-cc-disburse.sh  verify-may-references.sh
scripts/ops/: build-swop
scripts/release/: get-cabal-version  plan
scripts/smoke/: cardano-cli-envelope-oracle  devnet-local  record-cli-devnet-smoke  smoke.sh  swap-quote-docs  swap-quote-live-usdm.sh  swap-quote-override  swap-rerate-offline  swap-wizard-signers  treasury-inspect  tx-build-pipe  vault-witness  vault-witness-tty  withdraw-wizard-pipe  withdraw-wizard-zero-rewards
search/: search_index.json
skills/: README.md
skills/amaru-treasury-tx-guide/: SKILL.md
skills/amaru-treasury-tx-operator/: SKILL.md
specs/001-treasury-tx-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-swap-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-registry-walk/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-disburse-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-unified-tx-build/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-withdraw-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-aggregate-wallet-utxos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-disburse-includes-overhead/: spec.md  tasks.md
specs/009-swap-wizard-all-ada/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/070-quote-derived-swap-params/: data-model.md  finalization.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/072-mechanical-tx-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/074-report-render/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/079-normalize-tx-build-errors/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/080-local-devnet-smoke/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/083-devnet-withdrawal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/088-horizon-validity-rule/: plan.md  spec.md  tasks.md
specs/091-distribute-chunk-remainder/: gate.sh  plan.md  spec.md  tasks.md
specs/106-cardano-cli-envelopes/: plan.md  spec.md  tasks.md
specs/109-treasury-inspect/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/110-usdm-price-source/: plan.md  spec.md  tasks.md
specs/116-swap-cancel-orders/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/118-vault-witness/: data-model.md  gate.sh  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/119-devnet-swap-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/140-devnet-disburse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/147-devnet-registry-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/148-devnet-stake-reward/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/149-devnet-governance-withdrawal/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/150-devnet-disburse-beneficiary/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/157-flatten-devnet-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/158-registry-init-wizard/: plan.md  research.md  spec.md  tasks.md
specs/159-stake-reward-init-wizard/: analysis.md  (+4 more)
swap/: index.html
transactions/: README.md
trust-model/: index.html
(+1048 files in other folders)
