cabal-version:      3.4
name:               amaru-treasury-tx
version:            0.1.1.0
synopsis:           Build unsigned Amaru treasury transactions
description:
  Haskell port of the Amaru treasury bash recipes
  ('disburse', 'reorganize', 'withdraw') from
  pragma-org/amaru-treasury/journal/2026/. The CLI
  emits unsigned Conway transactions for offline
  signing.

license:            Apache-2.0
license-file:       LICENSE
author:             Paolo Veronelli
maintainer:         paolo.veronelli@gmail.com
category:           Cardano
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  assets/plutus/permissions.cbor
  assets/plutus/README.md
  assets/plutus/scopes.cbor
  assets/plutus/treasury.cbor
  assets/plutus/treasury_registry.cbor
  scripts/smoke/swap-wizard-signers
  test/fixtures/swap-wizard/**/*.json

flag werror
  description: Enable -Werror
  manual:      True
  default:     False

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wmissing-export-lists -Wname-shadowing
    -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror

  default-extensions:
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import:           warnings
  hs-source-dirs:   lib
  default-language: GHC2021
  exposed-modules:
    Amaru.Treasury
    Amaru.Treasury.AuxData
    Amaru.Treasury.Backend
    Amaru.Treasury.Backend.N2C
    Amaru.Treasury.ChainContext
    Amaru.Treasury.ChainContext.Fixture
    Amaru.Treasury.Constants
    Amaru.Treasury.LedgerParse
    Amaru.Treasury.Metadata
    Amaru.Treasury.PParams
    Amaru.Treasury.Redeemer
    Amaru.Treasury.Registry.Constants
    Amaru.Treasury.Registry.Derive
    Amaru.Treasury.Registry.Metadata
    Amaru.Treasury.Registry.Verify
    Amaru.Treasury.Scope
    Amaru.Treasury.Summary
    Amaru.Treasury.Tx.Disburse
    Amaru.Treasury.Tx.Swap
    Amaru.Treasury.Tx.Swap.Trace
    Amaru.Treasury.Tx.SwapBuild
    Amaru.Treasury.Tx.SwapIntentJSON
    Amaru.Treasury.Tx.SwapWizard
    Amaru.Treasury.Tx.SwapWizard.Trace
    Amaru.Treasury.Tx.Withdraw
    Amaru.Treasury.UtxoSelect
    Amaru.Treasury.Validity

  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base                    <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-node-clients
    , cardano-slotting
    , containers
    , contra-tracer
    , file-embed
    , filepath
    , microlens
    , ouroboros-network:api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , text
    , time

executable amaru-treasury-tx
  import:           warnings
  hs-source-dirs:   app/amaru-treasury-tx
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , aeson
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bech32
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , containers
    , contra-tracer
    , directory
    , microlens
    , optparse-applicative
    , ouroboros-network:api
    , text
    , time

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable capture-swap-context
  import:           warnings
  hs-source-dirs:   app/capture-swap-context
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bytestring
    , cardano-ledger-core
    , containers
    , optparse-applicative
    , ouroboros-network:api

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable swap-probe
  import:           warnings
  hs-source-dirs:   app/swap-probe
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
    , amaru-treasury-tx
    , base                   <5
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , ouroboros-network:api

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite unit-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            Spec.hs
  default-language:   GHC2021
  other-modules:
    Amaru.Treasury.AuxDataSpec
    Amaru.Treasury.LedgerParseSpec
    Amaru.Treasury.MetadataSpec
    Amaru.Treasury.PParamsSpec
    Amaru.Treasury.RedeemerSpec
    Amaru.Treasury.Registry.ConstantsSpec
    Amaru.Treasury.Registry.DeriveSpec
    Amaru.Treasury.Registry.MetadataSpec
    Amaru.Treasury.Registry.VerifySpec
    Amaru.Treasury.ScopeSpec
    Amaru.Treasury.SummarySpec
    Amaru.Treasury.Tx.DisburseSpec
    Amaru.Treasury.Tx.SwapSpec
    Amaru.Treasury.Tx.SwapWizardSpec
    Amaru.Treasury.Tx.WithdrawSpec
    Amaru.Treasury.UtxoSelectSpec
    PlaceholderSpec

  build-depends:
    , aeson
    , amaru-treasury-tx
    , base                    <5
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-node-clients
    , cardano-slotting
    , containers
    , hspec
    , hspec-discover
    , microlens
    , plutus-core
    , QuickCheck
    , serialise
    , text

  build-tool-depends: hspec-discover:hspec-discover

test-suite golden-tests
  import:             warnings
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/golden
  main-is:            Spec.hs
  default-language:   GHC2021
  other-modules:
    PlaceholderSpec
    RegistryWalkGoldenSpec
    SwapGoldenSpec

  build-depends:
    , aeson
    , aeson-pretty
    , amaru-treasury-tx
    , base               <5
    , base16-bytestring
    , bytestring
    , containers
    , hspec

  build-tool-depends: hspec-discover:hspec-discover
